# web-app

./: .gitignore  Dockerfile
.github/workflows/: build.yml  release.yml
backend/: .env.example  .gitignore  Cargo.toml  Rocket.example.toml  Rocket.toml
backend/migrations/2022-09-23-082928_letters/: down.sql  up.sql
backend/migrations/2022-09-23-130837_states/: up.sql
backend/migrations/2022-09-23-161604_reports/: up.sql
backend/migrations/2022-09-23-195204_users/: up.sql
backend/src/: config.rs  errors.rs  lib.rs  logger.rs  models.rs  restrictions.rs  schema.rs
backend/src/cli/: main.rs
backend/src/cli/api/: letters.rs  mod.rs  reports.rs  users.rs
backend/src/db/: letters.rs  mod.rs  reports.rs  state.rs  submission.rs  user.rs  users.rs
backend/src/db/tests/: mod.rs
backend/src/models/: letters.rs  mod.rs  prelude.rs  report.rs  state.rs  user.rs  user_token.rs
backend/src/reqs/: mod.rs  register.rs  user.rs
backend/src/resp/: error.rs
backend/src/util/: http.rs  mod.rs  supabase.rs
backend/src/utils/: letter.rs  mod.rs  slice.rs
backend/static/: robots.txt
frontend/: .editorconfig  .eslintrc.json  bun.lockb  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.tsx  setupProxy.js
frontend/src/app/: index.tsx  main.css  not_found.tsx  promotion.tsx  types.d.ts
frontend/src/app/dashboard/: index.tsx
frontend/src/app/login/: form.tsx  index.tsx
frontend/src/app/submission/: form.tsx  index.tsx  part.tsx  unavailable.tsx
frontend/src/utils/: tripleCase.ts
