[package]
name = "backend-lib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend-bin"
path = "src/bin/main.rs"

[features]
heroku = []
test_log = []

[dependencies]
ammonia = "3.2.1"
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.1"
figment = "0.10.7"
log = "0.4.17"
mime = "0.3.16"
postgrest = "1.3.1"
reqwest = "0.11.11"
rocket = { version = "0.5.0-rc.2", features = ["json", "tls"] }
rocket-governor = { version = "0.1.0-rc.4", features = ["logger"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
faker_rand = "0.1.1"
pretty_assertions = "1.3.0"
rand = "0.8.5"
