[package]
name = "backend-lib"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "backend-bin"
path = "src/cli/main.rs"

[features]
file_logging = []
hosting = []
test_log = []

[dependencies]
actix-governor = "0.3"
actix-web = { version = "4.2.1", features = ["openssl"] }
ammonia = "3.2.1"
anyhow = "1.0.65"
async-trait = "0.1.57"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
fern = "0.6.1"
log = "0.4.17"
nu-ansi-term = "0.46.0"
reqwest = { version = "0.11.12", features = ["json", "rustls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
