[package]
name = "backend-lib"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "backend-bin"
path = "src/cli/main.rs"

[features]
file_logging = []
hosting = []
test_log = []

[dependencies]
actix-governor = "0.3"
actix-session = "0.7.2"
actix-web = { version = "4.2.1", features = ["openssl"] }
aes = "0.8.1"
ammonia = "3.2.1"
anyhow = "1.0.65"
async-trait = "0.1.57"
base64 = "0.13.0"
bcrypt = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15.0"
fern = "0.6.1"
flate2 = "1.0.24"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
mime = "0.3.16"
nu-ansi-term = "0.46.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json", "rustls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
